@@ -45,6 +45,8 @@ Package org.springframework.osgi.web
 * DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header
 * introduced configuration property to web extender that allows deployed wars to be undeployed during shutdown
 * improved war undeployment by adding a timeout and better shutdown synchronization
+* improved handling of bundle locations given as URLs in DefaultContextPathStrategy
++ improved DefaultContextPathStrategy structure to allow better subclassing
 
 
 Changes in version 1.1.0 M2 (2008-04-29)
